brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Settings
  Configure settings for brocode.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  Press enter to confirm or esc to go back
