brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: header
---
› Ask brocode to do anything
