brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.

› Ask brocode to do anything

  ? for shortcuts                                            100% context left
