brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• `/copy` is unavailable before the first brocode output or right after a rollback.
