brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 12464
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  Fast on                                                                       "
