brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 12524
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  gpt-5.4 xhigh fast · 100% left · /tmp/project                                 "
