brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__status_widget_active.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11457
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
